--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
 language: bash
 
+install:
+  - git clone https://github.com/sstephenson/bats.git
+  - cd bats
+  - ./install.sh /usr/local
+
 script: bats test
