--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,7 @@ language: bash
 
 install:
   - git clone https://github.com/sstephenson/bats.git
+	- mkdir ~/bats
+	- cd bats && ./install.sh ~/bats
 
-script: bats/bats test
+script: ~/bats/bin/bats test
