--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,6 @@ install:
   - git clone https://github.com/sstephenson/bats.git ~/bats
   - ~/bats/install.sh ~/prefix
 
-script: ~/prefix/bin/bats test
+script:
+  - ~/prefix/bin/bats test
+  - ./scripts/package_self.sh
